refs still oversized

--- a/proposal/jensen-pres.tex
+++ b/proposal/jensen-pres.tex
@@ -1,8 +1,4 @@
-<<<<<<< HEAD
-% Created 2023-03-03 Fri 10:38
-=======
-% Created 2023-03-02 Thu 13:52
->>>>>>> parent of ff89ca4 (Broken references. Need to fix)
+% Created 2023-03-03 Fri 10:52
 % Intended LaTeX compiler: pdflatex
 \documentclass[presentation, aspectratio=1610]{beamer}
 \usepackage[utf8]{inputenc}
@@ -17,6 +13,8 @@
 \usepackage{capt-of}
 \usepackage{hyperref}
 \usetheme[progressbar=foot]{metropolis}
+\usepackage{caption}
+\captionsetup[figure]{labelformat=empty}
 \usetheme{metropolis}
 \usecolortheme{}
 \usefonttheme{}
@@ -44,23 +42,13 @@
 
 
 \section{Introduction}
-<<<<<<< HEAD
-\label{sec:org20dc070}
-\begin{frame}[label={sec:org8420ddc}]{Acknowledgments}
+\label{sec:orgad8dd19}
+\begin{frame}[label={sec:org3d181bb}]{Acknowledgments}
 I would like to thank the McJunkin Family Charitable Foundation for their generous grant that supports this work.
 \end{frame}
 \section{Motivation}
-\label{sec:org8f5cadb}
-\begin{frame}[label={sec:org51bdd62}]{The Problem}
-=======
-\label{sec:org67b971e}
-\begin{frame}[label={sec:org1dd3e2b}]{Acknowledgments}
-I would like to thank the McJunkin Family Charitable Foundation for their generous grant that supports this work.
-\end{frame}
-\section{Motivation}
-\label{sec:org94c169f}
-\begin{frame}[label={sec:orga7d9dd4}]{The Problem}
->>>>>>> parent of ff89ca4 (Broken references. Need to fix)
+\label{sec:org6fad4ec}
+\begin{frame}[label={sec:org58b7f2d}]{The Problem}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -82,11 +70,7 @@ I would like to thank the McJunkin Family Charitable Foundation for their genero
 \end{column}
 \end{columns}
 \end{frame}
-<<<<<<< HEAD
-\begin{frame}[label={sec:org827823c}]{Our Proposition}
-=======
-\begin{frame}[label={sec:org1b6f1a3}]{Our Proposition}
->>>>>>> parent of ff89ca4 (Broken references. Need to fix)
+\begin{frame}[label={sec:org3ee0815}]{Our Proposition}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 Orthopaedic surgeons and clinicians would readily adopt a practical and inexpensive technology that allows them to measure a patient's knee kinematics during activities of daily living.
@@ -98,11 +82,7 @@ Orthopaedic surgeons and clinicians would readily adopt a practical and inexpens
 \end{column}
 \end{columns}
 \end{frame}
-<<<<<<< HEAD
-\begin{frame}[label={sec:org8655799}]{Constraints}
-=======
-\begin{frame}[label={sec:org25f1ab3}]{Constraints}
->>>>>>> parent of ff89ca4 (Broken references. Need to fix)
+\begin{frame}[label={sec:org732e499}]{Constraints}
 \begin{columns}
 \begin{column}{0.45\columnwidth}
 \begin{itemize}
@@ -119,13 +99,8 @@ Orthopaedic surgeons and clinicians would readily adopt a practical and inexpens
 \end{columns}
 \end{frame}
 \section{Background}
-<<<<<<< HEAD
-\label{sec:orga141b40}
-\begin{frame}[label={sec:orgb624cd0}]{Rigid Body Transformations}
-=======
-\label{sec:orgad67985}
-\begin{frame}[label={sec:orgbb766fd}]{Rigid Body Transformations}
->>>>>>> parent of ff89ca4 (Broken references. Need to fix)
+\label{sec:orge74c3f5}
+\begin{frame}[label={sec:org8656fa8}]{Rigid Body Transformations}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{block}{Homogeneous Transformation Matrix}
@@ -168,11 +143,7 @@ Orthopaedic surgeons and clinicians would readily adopt a practical and inexpens
 \end{columns}
 \end{frame}
 
-<<<<<<< HEAD
-\begin{frame}[label={sec:org66cfa5c}]{Rigid Body Transformations}
-=======
-\begin{frame}[label={sec:org0f100e3}]{Rigid Body Transformations}
->>>>>>> parent of ff89ca4 (Broken references. Need to fix)
+\begin{frame}[label={sec:org7830973}]{Rigid Body Transformations}
 \begin{block}{Translation}
 \begin{equation*}
   \begin{aligned}
@@ -200,11 +171,7 @@ Orthopaedic surgeons and clinicians would readily adopt a practical and inexpens
 \end{block}
 \end{frame}
 
-<<<<<<< HEAD
-\begin{frame}[label={sec:orga8040ec}]{Rigid Body Transformations}
-=======
-\begin{frame}[label={sec:org3796a38}]{Rigid Body Transformations}
->>>>>>> parent of ff89ca4 (Broken references. Need to fix)
+\begin{frame}[label={sec:orged832ca}]{Rigid Body Transformations}
 \begin{block}{Rotations}
 \begin{equation*}
   \begin{aligned}
@@ -231,11 +198,7 @@ Orthopaedic surgeons and clinicians would readily adopt a practical and inexpens
 \end{block}
 \end{frame}
 
-<<<<<<< HEAD
-\begin{frame}[label={sec:org2c45bb0}]{Rigid Body Transformations}
-=======
-\begin{frame}[label={sec:org3238a6c}]{Rigid Body Transformations}
->>>>>>> parent of ff89ca4 (Broken references. Need to fix)
+\begin{frame}[label={sec:org75ef243}]{Rigid Body Transformations}
 \begin{block}{Homogeneous Transformation Matrices}
 \begin{equation*}
   \begin{aligned}
@@ -251,11 +214,7 @@ Orthopaedic surgeons and clinicians would readily adopt a practical and inexpens
 Now we have a notation that allows us to describe arbitrary movement between reference frames.
 \end{block}
 \end{frame}
-<<<<<<< HEAD
-\begin{frame}[label={sec:orgc08b8a8}]{Projective Geometry}
-=======
-\begin{frame}[label={sec:org540695f}]{Projective Geometry}
->>>>>>> parent of ff89ca4 (Broken references. Need to fix)
+\begin{frame}[label={sec:org25e0856}]{Projective Geometry}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{equation*}
@@ -291,11 +250,7 @@ Where
 \end{column}
 \end{columns}
 \end{frame}
-<<<<<<< HEAD
-\begin{frame}[label={sec:org9004faf}]{Pixel Coordinates}
-=======
-\begin{frame}[label={sec:orgd3693ce}]{Pixel Coordinates}
->>>>>>> parent of ff89ca4 (Broken references. Need to fix)
+\begin{frame}[label={sec:org8b5587b}]{Pixel Coordinates}
 Convert camera coordinates into image coordinates.
 \begin{equation*}
   \begin{aligned}
@@ -312,11 +267,7 @@ Where
 \end{equation*}
 \end{frame}
 
-<<<<<<< HEAD
-\begin{frame}[label={sec:orgf5a9f37}]{Model-Image Registration}
-=======
-\begin{frame}[label={sec:orgfd7ee34}]{Model-Image Registration}
->>>>>>> parent of ff89ca4 (Broken references. Need to fix)
+\begin{frame}[label={sec:orgca80541}]{Model-Image Registration}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 If we know the projective parameters of the fluoroscopy machine, can we tinker with \(T^{cam}_{implant}\) so that our virtual projection matches the fluoroscopic image?
@@ -331,13 +282,8 @@ If we know the projective parameters of the fluoroscopy machine, can we tinker w
 \end{columns}
 \end{frame}
 \section{Historical Methods}
-<<<<<<< HEAD
-\label{sec:orgb551ad8}
-\begin{frame}[label={sec:orgd132949}]{Overview}
-=======
-\label{sec:org5da5081}
-\begin{frame}[label={sec:org2624207}]{Overview}
->>>>>>> parent of ff89ca4 (Broken references. Need to fix)
+\label{sec:orgd62f57d}
+\begin{frame}[label={sec:org4ce88e2}]{Overview}
 Many different approaches have attempted to solve the model-image registration problem.
 \begin{itemize}
 \item Pre-computed projections
@@ -346,11 +292,7 @@ Many different approaches have attempted to solve the model-image registration p
 \item Iterative Projections
 \end{itemize}
 \end{frame}
-<<<<<<< HEAD
-\begin{frame}[label={sec:org3bacc15}]{Pre-Computed Projections}
-=======
-\begin{frame}[label={sec:org9e7955a}]{Pre-Computed Projections}
->>>>>>> parent of ff89ca4 (Broken references. Need to fix)
+\begin{frame}[label={sec:org35e2043}]{Pre-Computed Projections}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -369,11 +311,7 @@ Many different approaches have attempted to solve the model-image registration p
 \end{column}
 \end{columns}
 \end{frame}
-<<<<<<< HEAD
-\begin{frame}[label={sec:org9c71b5d}]{Limitations of Pre-Computed Projections}
-=======
-\begin{frame}[label={sec:orgaeaba1d}]{Limitations of Pre-Computed Projections}
->>>>>>> parent of ff89ca4 (Broken references. Need to fix)
+\begin{frame}[label={sec:orgb0ab5db}]{Limitations of Pre-Computed Projections}
 \begin{itemize}
 \item Requires an accurate contour from the input image in order to perform calculations.
 \begin{itemize}
@@ -382,11 +320,7 @@ Many different approaches have attempted to solve the model-image registration p
 \end{itemize}
 \end{frame}
 
-<<<<<<< HEAD
-\begin{frame}[label={sec:org0b4ee4b}]{Motion Capture (MoCap)}
-=======
-\begin{frame}[label={sec:org5b44d59}]{Motion Capture (MoCap)}
->>>>>>> parent of ff89ca4 (Broken references. Need to fix)
+\begin{frame}[label={sec:orgc3e428a}]{Motion Capture (MoCap)}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -406,11 +340,7 @@ Many different approaches have attempted to solve the model-image registration p
 \end{column}
 \end{columns}
 \end{frame}
-<<<<<<< HEAD
-\begin{frame}[label={sec:org8d150bb}]{Limitations of Motion Capture}
-=======
-\begin{frame}[label={sec:orge923dea}]{Limitations of Motion Capture}
->>>>>>> parent of ff89ca4 (Broken references. Need to fix)
+\begin{frame}[label={sec:orgb4727d3}]{Limitations of Motion Capture}
 Skin Mounted
 \begin{itemize}
 \item Doesn't accurately describe underlying skeletal motion with clinical accuracy \autocites{gaoInvestigationSoftTissue2008}[][]{kuoInfluenceSoftTissue2011}[][]{linEffectsSoftTissue2016}.
@@ -421,11 +351,7 @@ Bone Pins
 \item Need I say more?
 \end{itemize}
 \end{frame}
-<<<<<<< HEAD
-\begin{frame}[label={sec:orgb0b4d92}]{Biplane Imaging}
-=======
-\begin{frame}[label={sec:org229b898}]{Biplane Imaging}
->>>>>>> parent of ff89ca4 (Broken references. Need to fix)
+\begin{frame}[label={sec:orge4db004}]{Biplane Imaging}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -446,22 +372,14 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-<<<<<<< HEAD
-\begin{frame}[label={sec:org4d6375c}]{Limitations of Biplane Imaging}
-=======
-\begin{frame}[label={sec:org04c4481}]{Limitations of Biplane Imaging}
->>>>>>> parent of ff89ca4 (Broken references. Need to fix)
+\begin{frame}[label={sec:org50becc6}]{Limitations of Biplane Imaging}
 \begin{itemize}
 \item Not many hospitals have biplane fluoroscopy setups.
 \item Clinically impractical
 \end{itemize}
 \end{frame}
 
-<<<<<<< HEAD
-\begin{frame}[label={sec:org2fdd7da}]{Iterative Projections}
-=======
-\begin{frame}[label={sec:orgbb46f10}]{Iterative Projections}
->>>>>>> parent of ff89ca4 (Broken references. Need to fix)
+\begin{frame}[label={sec:org6aa1fa5}]{Iterative Projections}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -480,11 +398,7 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-<<<<<<< HEAD
-\begin{frame}[label={sec:org64525aa}]{Limitations of (historic) Iterative Projection Methods}
-=======
-\begin{frame}[label={sec:org04d16d4}]{Limitations of (historic) Iterative Projection Methods}
->>>>>>> parent of ff89ca4 (Broken references. Need to fix)
+\begin{frame}[label={sec:org0f0d707}]{Limitations of (historic) Iterative Projection Methods}
 \begin{itemize}
 \item Requires human supervision for:
 \begin{itemize}
@@ -496,11 +410,7 @@ Bone Pins
 \end{itemize}
 \end{frame}
 
-<<<<<<< HEAD
-\begin{frame}[label={sec:org4dff9c3}]{Model-based Roentgen Stereophotogrammetry (MBRSA)}
-=======
-\begin{frame}[label={sec:org1844ed1}]{Model-based Roentgen Stereophotogrammetry (MBRSA)}
->>>>>>> parent of ff89ca4 (Broken references. Need to fix)
+\begin{frame}[label={sec:org4cd9792}]{Model-based Roentgen Stereophotogrammetry (MBRSA)}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -520,13 +430,8 @@ Bone Pins
 \end{columns}
 \end{frame}
 \section{Aims}
-<<<<<<< HEAD
-\label{sec:orgd0d0fe3}
-\begin{frame}[label={sec:orgff43572}]{Aims}
-=======
-\label{sec:org704b485}
-\begin{frame}[label={sec:org3326c57}]{Aims}
->>>>>>> parent of ff89ca4 (Broken references. Need to fix)
+\label{sec:org8238d3d}
+\begin{frame}[label={sec:orgd8e89f3}]{Aims}
 \begin{columns}
 \begin{column}{0.3\columnwidth}
 \begin{block}{Aims 1/2}
@@ -547,13 +452,8 @@ Joint Track Auto Toolkit
 \end{frame}
 
 \section{References}
-<<<<<<< HEAD
-\label{sec:org08b83e0}
-\begin{frame}[label={sec:orgeee1dbb},fragile, allowframebreaks, label=]{References}
-=======
-\label{sec:orgcedc339}
-\begin{frame}[label={sec:org1d57650},fragile, allowframebreaks, label=]{References}
->>>>>>> parent of ff89ca4 (Broken references. Need to fix)
+\label{sec:orgc387d15}
+\begin{frame}[label={sec:org8dbb5bc},fragile, allowframebreaks, label=]{References}
 \AtNextBibliography{\tiny}
 \printbibliography
 \end{frame}
